@@ -6,6 +6,7 @@ Release 1.3
 #20 IEncoderService to return Encoder instead of DataResponse
 #21 SelectBuilder.withEntity - rename to SelectBuilder.canRead.
 #23 Refactor EntityConfig and friends into 'constraints'
+#24 LinkRestAdapter - a generic LR extension mechanism
 
 Release 1.2 2013-08-01
 
